# experience-hub

./: .env.example  .env.simbot  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .releaserc.js  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/workflows/: continuous_integration.yml  releases.yml  tests.yml
docker/: base-poetry.Dockerfile  base.Dockerfile  docker-bake.hcl  docker-compose.1gpu.yaml  docker-compose.2gpu.yaml  docker-compose.3gpu.yaml  docker-compose.4gpu.yaml  docker-compose.observability.yaml  docker-compose.yaml  emma-builder.Dockerfile  emma-full.Dockerfile  emma-nlg.Dockerfile  observability-docker-compose.yaml  profanity-filter.Dockerfile  simbot-docker-compose.prod.yaml  simbot-docker-compose.staging.yaml  simbot-docker-compose.yaml  teach-inference.Dockerfile
docker/configs/: data-prepper-pipelines.yaml  otel-collector-config.yaml
docker/helpers/: add-pat-to-git.sh
scripts/: format_feedback_rules_csv.py  setup-ec2-instance.sh
src/emma_experience_hub/: __init__.py  __main__.py  _version.py
src/emma_experience_hub/api/: simbot.py
src/emma_experience_hub/api/clients/: __init__.py  client.py  compound_splitter.py  confirmation_response_classifier.py  dynamo_db.py  emma_policy.py  feature_extractor.py  out_of_domain_detector.py  profanity_filter.py  pydantic.py  simbot.py  simbot_session_db.py  utterance_generator.py
src/emma_experience_hub/api/clients/simbot/: __init__.py  action_prediction.py  cache.py  cr_intent.py  features.py  hacks.py  nlu_intent.py  placeholder_vision.py  qa_intent.py  session_db.py  session_local_db.py  utterance_generator.py
src/emma_experience_hub/api/controllers/: __init__.py  simbot.py
src/emma_experience_hub/api/controllers/simbot/: clients.py  controller.py  pipelines.py
src/emma_experience_hub/api/observability/: __init__.py  instrumentation.py  logging.py
src/emma_experience_hub/api/services/: __init__.py  emma_launcher.py
src/emma_experience_hub/api/state/: simbot.py
src/emma_experience_hub/commands/: build_emma.py  docker.py  torch.py
src/emma_experience_hub/commands/simbot/: cli.py  download.py
src/emma_experience_hub/commands/teach/: __init__.py  api.py  cli.py  constants.py  dataset.py  download.py  inference.py  metrics.py  xserver.py
src/emma_experience_hub/common/: __init__.py  docker.py  logging.py  settings.py  system.py  torch.py
src/emma_experience_hub/common/settings/: __init__.py  emma_services.py  settings.py  simbot.py
src/emma_experience_hub/constants/: alexa.py  model.py  simbot.py
src/emma_experience_hub/constants/simbot/: arena_definitions.json  feedback_rules.csv  prior_memory.json  registry.yaml  response_templates.yaml  search_budget.json
src/emma_experience_hub/datamodels/: __init__.py  common.py  emma.py  registry.py
src/emma_experience_hub/datamodels/enums/: __init__.py  search_planner.py
src/emma_experience_hub/datamodels/simbot/: __init__.py  actions.py  agent_memory.py  api_helpers.py  feedback.py  intents.py  queue.py  request.py  response.py  session.py  speech.py
src/emma_experience_hub/datamodels/simbot/actions/: __init__.py  actions.py  auxiliary_metadata.py  dialog.py  navigation.py  object_interaction.py  speech_recognition.py
src/emma_experience_hub/datamodels/simbot/enums/: __init__.py  action_status.py  actions.py  intents.py
src/emma_experience_hub/datamodels/simbot/payloads/: __init__.py  auxiliary_metadata.py  dialog.py  navigation.py  object_interaction.py  payload.py  speech_recognition.py
src/emma_experience_hub/entrypoints/: run-teach-api.sh
src/emma_experience_hub/functions/: coordinates.py
src/emma_experience_hub/functions/simbot/: __init__.py  actions.py  grab_from_history.py  masks.py  search.py  special_tokens.py  viewpoint_iterator.py
src/emma_experience_hub/functions/simbot/agent_intent_selection/: __init__.py  clarification_handler.py  confirmation_handler.py  instruction_handler.py  object_qa_handler.py
src/emma_experience_hub/parsers/: __init__.py  parser.py
src/emma_experience_hub/parsers/simbot/: __init__.py  action_predictor_output.py  cr_output.py  feedback_from_session_context.py  intent_from_action_status.py  low_asr_confidence_detector.py  nlu_output.py  previous_action.py  qa_entity_output.py  qa_output.py  visual_grounding_output.py
src/emma_experience_hub/parsers/simbot/functions/: __init__.py  actions.py  special_tokens.py
src/emma_experience_hub/pipelines/: __init__.py  nlu_pipeline.py  request_processing.py
src/emma_experience_hub/pipelines/simbot/: __init__.py  agent_action_generation.py  agent_intent_selection.py  agent_language_generation.py  anticipator.py  compound_splitter.py  environment_error_catching.py  environment_intent_extraction.py  find_object.py  nlu.py  raw_text_matching.py  request_processing.py  response_generator.py  user_intent_extraction.py  user_utterance_verification.py
storage/fixtures/simbot/: simbot_request.json
storage/fixtures/simbot/game_metadata/: sample-game-metadata.json
storage/registry/simbot/: production.yaml
tests/: conftest.py
tests/clients/: test_dynamo_db.py
tests/constants/: test_response_templates.py
tests/controller/: test_simbot_controller.py
tests/datamodels/: test_emma_datamodels.py  test_registry.py  test_simbot_actions.py  test_simbot_api_helpers.py  test_simbot_auxiliary_metadata.py  test_simbot_payloads.py  test_simbot_request.py  test_simbot_session.py
tests/datamodels/simbot/: test_action_payloads.py  test_auxiliary_metadata_payload.py  test_enums.py  test_object_interaction_payload.py  test_session_turns.py  test_speech_recognition_payload.py
tests/fixtures/: clients.py  paths.py  simbot_actions.py  simbot_api_requests.py  simbot_arena_constants.py  simbot_paths.py
tests/functions/: test_compress_masks.py
tests/parsers/: test_simbot_action_parser.py  test_simbot_nlu_parser.py
tests/parsers/simbot/: test_action_parser.py  test_low_asr_confidence_detector.py  test_nlu_parser.py
tests/pipelines/simbot/: test_language_generator.py
(+1 files in other folders)
